--- a/css/styles.css
+++ b/css/styles.css
@@ -7,26 +7,52 @@
 html,
 body {
   height: 100%;
+
   background-color: #000;
 }
+
+/* @media screen and (min-width: 768px) {
+  body {
+    width: 100%;
+  }
+} */
+/* @media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+} */
 
 .logo {
   z-index: 10;
   position: absolute;
   top: 2%;
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   height: 100px;
   width: 300px;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  opacity: 0.5;
+  opacity: 1;
 }
 .logo:hover {
   opacity: 1;
 }
 .slider {
-  height: 100%;
+  height: 80%;
+  top: 20%;
+}
+@media screen and (min-width: 768px) {
+  .slider {
+    top: 0;
+    height: 100%;
+    width: 100%;
+  }
+  .logo {
+    opacity: 0.5;
+    left: 2%;
+    transform: translateX(0%);
+  }
 }
 
 .slider-layer {
@@ -44,4 +70,5 @@ body {
 .slider__wrapper {
   will-change: transform;
   transform-style: preserve-3d;
+  color: #7c8f55;
 }
