--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+:root {
+  --transition: 1.5s cubic-bezier(0.2, 0.6, 0, 1);
+}
 * {
   margin: 0;
   padding: 0;
@@ -11,17 +14,6 @@ body {
   background-color: #000;
 }
 
-/* @media screen and (min-width: 768px) {
-  body {
-    width: 100%;
-  }
-} */
-/* @media screen and (min-width: 1200px) {
-  .container {
-    width: 1200px;
-  }
-} */
-
 .logo {
   z-index: 10;
   position: absolute;
@@ -29,11 +21,12 @@ body {
   left: 50%;
   transform: translateX(-50%);
   height: 100px;
-  width: 300px;
+  width: 250px;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   opacity: 1;
+  transition: opacity 500ms ease-in-out;
 }
 .logo:hover {
   opacity: 1;
@@ -49,9 +42,13 @@ body {
     width: 100%;
   }
   .logo {
-    opacity: 0.5;
+    opacity: 0.6;
     left: 2%;
     transform: translateX(0%);
+  }
+  .button__play {
+    top: 5%;
+    right: 2%;
   }
 }
 
@@ -62,13 +59,44 @@ body {
   background-size: cover;
   background-position: center;
   will-change: transform;
+  /* transition: var(--transition) !important; */
 }
 .slider__item {
   overflow: hidden;
 }
 
 .slider__wrapper {
-  will-change: transform;
   transform-style: preserve-3d;
-  /* color: #a31c1c; */
+  will-change: transform;
+  /* transition: var(--transition) !important; */
+}
+
+.button__play {
+  position: absolute;
+  bottom: 2%;
+  right: 2%;
+  z-index: 12;
+  fill: white;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  opacity: 0.6;
+  border: none;
+}
+.button__play.play {
+  opacity: 1;
+  animation: magic 2s infinite alternate;
+}
+.button__play:hover {
+  opacity: 1;
+}
+
+@keyframes magic {
+  0% {
+    opacity: 0.2;
+  }
+
+  100% {
+    opacity: 0.6;
+  }
 }
