--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ body {
   background-repeat: no-repeat;
   opacity: 1;
   transition: opacity 500ms ease-in-out;
+  background-image: url(../images/Logo/mob/Logo_mob.png);
 }
 .logo:hover {
   opacity: 1;
@@ -34,6 +35,49 @@ body {
 .slider {
   height: 80%;
   top: 20%;
+}
+.s1l1 {
+  background-image: url(../images/Laborant/mob/01_Laborant_mob.webp);
+}
+.s1l2 {
+  background-image: url(../images/Laborant/mob/02_Laborant_mob.webp);
+}
+.s1l3 {
+  background-image: url(../images/Laborant/mob/03_Laborant_mob.webp);
+}
+.s1l4 {
+  background-image: url(../images/Laborant/mob/04_Laborant_mob.webp);
+}
+.s1l5 {
+  background-image: url(../images/Laborant/mob/05_Laborant_mob.webp);
+}
+
+.s2l1 {
+  background-image: url(../images/Gravi/mob/01_Gravi_mob.webp);
+}
+
+.s2l2 {
+  background-image: url(../images/Gravi/mob/02_Gravi_mob.webp);
+}
+
+.s2l3 {
+  background-image: url(../images/Gravi/mob/03_Gravi_mob.webp);
+}
+
+.s2l4 {
+  background-image: url(../images/Gravi/mob/04_Gravi_mob.webp);
+}
+.s3l1 {
+  background-image: url(../images/Blue/mob/01_Blue_mob.webp);
+}
+.s3l2 {
+  background-image: url(../images/Blue/mob/02_Blue_mob.webp);
+}
+.s3l3 {
+  background-image: url(../images/Blue/mob/03_Blue_mob.webp);
+}
+.s3l4 {
+  background-image: url(../images/Blue/mob/04_Blue_mob.webp);
 }
 @media screen and (min-width: 768px) {
   .slider {
@@ -49,6 +93,49 @@ body {
   .button__play {
     top: 5%;
     right: 2%;
+  }
+  .s1l1 {
+    background-image: url(../images/Laborant/desk/01_Laborant.webp);
+  }
+  .s1l2 {
+    background-image: url(../images/Laborant/desk/02_Laborant.webp);
+  }
+  .s1l3 {
+    background-image: url(../images/Laborant/desk/03_Laborant.webp);
+  }
+  .s1l4 {
+    background-image: url(../images/Laborant/desk/04_Laborant.webp);
+  }
+  .s1l5 {
+    background-image: url(../images/Laborant/desk/05_Laborant.webp);
+  }
+
+  .s2l1 {
+    background-image: url(../images/Gravi/desk/01_Gravi.webp);
+  }
+
+  .s2l2 {
+    background-image: url(../images/Gravi/desk/02_Gravi.webp);
+  }
+
+  .s2l3 {
+    background-image: url(../images/Gravi/desk/03_Gravi.webp);
+  }
+
+  .s2l4 {
+    background-image: url(../images/Gravi/desk/04_Gravi.webp);
+  }
+  .s3l1 {
+    background-image: url(../images/Blue/desk/01_Blue.webp);
+  }
+  .s3l2 {
+    background-image: url(../images/Blue/desk/02_Blue.webp);
+  }
+  .s3l3 {
+    background-image: url(../images/Blue/desk/03_Blue.webp);
+  }
+  .s3l4 {
+    background-image: url(../images/Blue/desk/04_Blue.webp);
   }
 }
 
@@ -82,12 +169,14 @@ body {
   background-color: transparent;
   opacity: 0.6;
   border: none;
+  transition: opacity 500ms ease-in-out;
 }
 .button__play.play {
   opacity: 1;
   animation: magic 2s infinite alternate;
 }
 .button__play:hover {
+  cursor: pointer;
   opacity: 1;
 }
 
